compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/funEquals.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
fun foo() =<!SYNTAX!><!>
